Apply facebook authentication and integrate facebook json to be stored in db.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="square_bash">Square Bash</string>
     <string name="play">Play</string>
     <string name="quarklab">Quarklab</string>
+    <string name="facebook_app_id">916130085175917</string>
 </resources>
