--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="play">Play</string>
     <string name="quarklab">Quarklab</string>
     <string name="facebook_app_id">916130085175917</string>
+    <string name="save_player_api">/player/save</string>
+    <string name="update_score_api">/player/update_score</string>
 </resources>
