--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="facebook_app_id">916130085175917</string>
     <string name="save_player_api">/player/save</string>
     <string name="update_score_api">/player/update_score</string>
+    <string name="leader_board_api">/rank</string>
 </resources>
