--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="save_player_api">/player/save</string>
     <string name="update_score_api">/player/update_score</string>
     <string name="leader_board_api">/rank</string>
+    <string name="server_problem">Server under maintenance, try again later.</string>
 </resources>
