--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="update_score_api">/player/update_score</string>
     <string name="leader_board_api">/rank</string>
     <string name="server_problem">Server under maintenance, try again later.</string>
+    <string name="banner_ad_unit_id">ca-app-pub-5665008338785349/8413875716</string>
 </resources>
