--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Square Bash</string>
     <string name="sound">Sound</string>
     <string name="leader_board">Leader board</string>
-    <string name="square_bash">Square Bash</string>
+    <string name="title">Volo</string>
     <string name="play">Play</string>
     <string name="quarklab">www.quarklabs.co</string>
     <string name="facebook_app_id">916130085175917</string>
