--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Square Bash</string>
+    <string name="app_name">Volo</string>
     <string name="sound">Sound</string>
     <string name="leader_board">Leader board</string>
     <string name="title">Volo</string>
