--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="server_problem">Server under maintenance, try again later.</string>
     <string name="banner_ad_unit_id">ca-app-pub-5665008338785349/8698851718</string>
     <string name="default_time">00:00</string>
+
+    <string name="title_activity_how_to_play">HowToPlay</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
