--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,34 @@
     <string name="title_activity_how_to_play">HowToPlay</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="how_to_play_text">
+        A social board game with unpredictable events, You will face 3 modes each one have its own challange for specific period of time.
+    </string>
+    <string name="how_to_play_text_easy_modes">
+        The Easy mode in which the Green shape gives you score, Red shape take from you lifes and Gray shape take from you score.
+    </string>
+    <string name="how_to_play_text_sudden_death_modes">
+        The Sudden Death mode in which the Green will take from you life, Red will give you score and the gray will take from you score.
+    </string>
+    <string name="how_to_play_text_double_tab_modes">
+        The DoubleTab mode in which the green gives you double the score and Red is the same also, except the gray it will reduce double the score.
+    </string>
+    <string name="how_to_play_continue">
+        And then it come the Utilities which will help you to achive your highest score:
+    </string>
+    <string name="how_to_play_text_gift_utility">
+        The Gifts which gives you score or life.
+    </string>
+    <string name="how_to_play_text_bomb_utility">
+        The Bombs which it will increase or decrease the game speed or it will be a bomb of the 3 colors (Red, Green, Gray) for specific period of time.
+    </string>
+    <string name="how_to_play_text_dice_utility">
+        The Dice it represent your lucky shot which may gives you score or life or take from you score or life.
+    </string>
+    <string name="how_to_play_text_time_utility">
+        The Stopwatch it will increase the game countdown timer so you can play more.
+    </string>
+    <string name="how_to_play_text_other">
+        You need to keep up with the game or you may loss your life or the time ends up quickly.
+    </string>
 </resources>
