Update description fix leaderboard divider.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="how_to_play_text">
-        A social board game with unpredictable events, You will face 4 modes each one has its own challenge for a specific period of time.    </string>
+        A social casual game with unpredictable events, You will face 4 modes each one has its own challenge for a specific period of time.    </string>
     <string name="how_to_play_text_easy_modes">
         The Easy mode in which the Green shape gives you score, Red shape takes from your life and grey shape takes from your score.    </string>
     <string name="how_to_play_text_sudden_death_modes">
